# fly-in

./: Makefile  README.md  assets.py  drone.py  fly-in.py  format.py  graph.py  main.py  map.py  process.py  pyproject.toml  test.py
assets/: license.txt
entities/: __init__.py  connection.py  drone.py  entities.py  hub.py
font/: license.txt
maps/: test2.txt  test3.tct  test3.txt
parse/: __init__.py  parse.py  validator.py
