[project]
name = "fly-in"
version = "0.1.0"
description = "Drones are interesting."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "lark>=1.3.1",
    "matplotlib>=3.10.9",
    "mypy>=2.1.0",
    "pygame>=2.6.1",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=2.1.0",
]

[tool.mypy]
disable_error_code = ["import-untyped"]